@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xs:schema
-    targetNamespace ="http://lt.5grupe.karolis/biosensor/model/transducer"
-    xmlns           ="http://lt.5grupe.karolis/biosensor/model/transducer"
-    xmlns:bio       ="http://lt.5grupe.karolis/biosensor/model"
+    targetNamespace ="http://karolis.5grupe.lt/biosensor/model/transducer"
+    xmlns           ="http://karolis.5grupe.lt/biosensor/model/transducer"
+    xmlns:bio       ="http://karolis.5grupe.lt/biosensor/model"
     xmlns:xs        ="http://www.w3.org/2001/XMLSchema"
     elementFormDefault="qualified">
 
 
     <xs:import
-        namespace="http://lt.5grupe.karolis/biosensor/model"
+        namespace="http://karolis.5grupe.lt/biosensor/model"
         schemaLocation="Model.xsd"
     />
 
