@@ -20,8 +20,11 @@ biosensor (0.4.0) unstable; urgency=low
   * Fixed bug in generation of xsi:schemaLocation for the model-
     actual.xml
   * Removed empty cxx files.
+  * Renamed all namespaces to use prefix http://karolis.5grupe.lt/
+    instead of http://lt.5grupe.karolis/. I think there was a big
+    mistype.
 
- -- Karolis Petrauskas <k.petrauskas@gmail.com>  Mon, 16 Nov 2009 23:07:42 +0200
+ -- Karolis Petrauskas <k.petrauskas@gmail.com>  Sun, 22 Nov 2009 01:17:13 +0200
 
 biosensor (0.3.8) unstable; urgency=low
 
